fix(core): make lifecycle pagination and funding cuts deterministic